--- a/client/pethaven/src/App.css
+++ b/client/pethaven/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #282b3400;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -35,4 +35,343 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+
+.signup{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10%;
+  background-color: rgb(222, 147, 135);
+  width: 400px;
+  padding-top: 5px;
+  padding-bottom: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 15px;
+  height: 400px;
+}
+
+.register{
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-top: 20px;
+  color: #db3434;
+  background-color: #ccba2e;
+}
+
+.username{
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-top: 20px;
+  color: #db3434b4;
+  background-color: #ccba2e;
+}
+
+.password{
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-top: 20px;
+  color: #db3434;
+  background-color: #ccba2e;
+}
+
+.signup input{
+  width: 300px;
+  height: 40px;
+  text-align: center;
+  font-size: 20px;
+}
+
+body{
+  background-color: 
+  rgba(222, 205, 135, 0.945);
+}
+
+
+.signin{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10%;
+  background-color: rgb(222, 135, 164);
+  width: 400px;
+  padding-top: 5px;
+  padding-bottom: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 15px;
+  height: 400px;
+}
+
+.signin input{
+  width: 300px;
+  height: 40px;
+  text-align: center;
+  font-size: 20px;
+}
+
+
+.search{
+  width: 300px;
+  height: 40px;
+  text-align: center;
+  font-size: 20px;
+}
+
+/* all pets styling */
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  background-color: #3d3d3d;
+  color: #ffffff40;
+}
+
+.title {
+  font-size: 32px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.link {
+  color: #ffffffdc;
+  text-decoration: none;
+  margin-left: 20px;
+  font-size: 18px;
+}
+
+.link:hover {
+  text-decoration: underline;
+}
+
+.pets-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+/* styling petcard */
+
+.petcard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 250px;
+  height: 350px;
+  background-color: #ffffff32;
+  box-shadow: 0px 0px 5px 1px #ccc;
+  padding: 20px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.pet-image {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.pet-name {
+  font-size: 24px;
+  margin: 0;
+}
+
+.pet-info {
+  font-size: 16px;
+  margin: 5px 0;
+}
+
+
+/* Styling Userpets */
+
+/* Style for the heading */
+h1 {
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+/* Style for the container of the page */
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 2rem;
+}
+
+/* Style for the container of the pet cards */
+.card-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 2rem;
+}
+
+/* Style for the link buttons */
+.link {
+  text-decoration: none;
+  color: #fff;
+  background-color: #3d3d3d;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  margin-right: 1rem;
+  cursor: pointer;
+}
+
+/* Style for the add pet button */
+.add-pet{
+  margin-top: 30px;
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 2rem;
+}
+
+/* Style for the pet cards */
+.petcard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 250px;
+  height: 350px;
+  background-color: #ffffffce;
+  box-shadow: 0px 0px 5px 1px #cccccc81;
+  padding: 20px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.pet-image {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.pet-name {
+  font-size: 24px;
+  margin: 0;
+}
+
+.pet-info {
+  font-size: 16px;
+  margin: 5px 0;
+}
+
+.pet-buttons {
+  display: flex;
+  justify-content: space-between;
+  margin-top: auto;
+  width: 100%;
+  margin-top: 1rem;
+}
+
+.delete-button,
+.edit-button {
+  background-color: #3d3d3d;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.delete-button:hover,
+.edit-button:hover {
+  background-color: #555;
+}
+
+.add-pet-button {
+  background-color: #3d3d3d;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.add-pet-button:hover {
+  background-color: #555;
+}
+
+/* styling addpets */
+
+.mypets {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.mypets input {
+  font-size: 18px;
+  padding: 10px;
+  margin: 10px;
+  border: 2px solid #ccc;
+  border-radius: 5px;
+  width: 300px;
+  max-width: 100%;
+}
+
+.mypets button[type="submit"] {
+  font-size: 18px;
+  padding: 10px;
+  margin-top: 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: #2ecc71;
+  color: white;
+  cursor: pointer;
+}
+
+.mypets button[type="submit"]:hover {
+  background-color: #27ae60;
+}
+
+.mypets button {
+  font-size: 18px;
+  padding: 10px;
+  margin: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #3498db;
+  color: white;
+  cursor: pointer;
+}
+
+.mypets button:hover {
+  background-color: #2980b9;
+}
+
+.lUser{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* margin-top: 0px;
+  background-color: burlywood; */
+  /* width: 400px;
+  padding-top: 0px;
+  padding-bottom: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 15px;
+  height: 400px; */
+}
+
+.hover:hover{
+  color: red;
 }
